@@ -172,6 +172,7 @@ Version 1.5
  - Add Yale Key Free Touchscreen Deadbolt YRD446 (Nechry)
  - Add Yale nexTouch Wireless Touchscreen (Nechry)
  - Add Fakro ZWRS Roller Shutter FLiRS module
+ - Add Homeseer HS-WS100+ Wall Switch
  
 Version 1.4
  - Released 10th Jan, 2016
